--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -58,6 +58,7 @@ RUN julia -e 'import Pkg; Pkg.update()' && \
       "Distributions", \
       "FileIO", \
       "GLM", \
+      "GLMakie", \
       "GeneticsMakie", \
       "Glob", \
       "GraphRecipes", \
