--- a/Docker/mimic_iv_volume.yaml
+++ b/Docker/mimic_iv_volume.yaml
@@ -3,14 +3,14 @@ kind: PersistentVolume
 metadata:
   name: mimic-iv-pv
 spec:
-  storageClassName: "test"
+  storageClassName: "premium-rwo"
   capacity:
     storage: 20G
   accessModes:
-    - ReadOnlyMany
+    - ReadWriteOnce
   claimRef:
-    namespace: default
     name: mimic-iv-pvc
+    namespace: jhub
   gcePersistentDisk:
     pdName: mimic-iv
     fsType: ext4
@@ -19,10 +19,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mimic-iv-pvc
+  namespace: jhub
 spec:
-  storageClassName: "test"
+  storageClassName: "premium-rwo"
   accessModes:
-    - ReadOnlyMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 20G
