--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 PGENFiles = "bbb59ef6-f40c-4dde-a38e-7e7eb74f31f9"
+Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
 Plotly = "58dd65bb-95f3-509e-9936-c39a10fdeae7"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
